--- a/index.html
+++ b/index.html
@@ -262,17 +262,17 @@
         productoNombre: "Pack Corrector de Sueño",
         badge: "Más Vendido 2025",
         descripcion: "Parches bucales hipoalergénicos para dejar de roncar, dormir profundo y despertar con energía. Pack de 30 unidades.",
-        precio: 7.99,
-        precioAnterior: 15.99,
+        precio: 14.99,
+        precioAnterior: 29.99,
 
         // 🟢 NUEVO: LISTA DE VIDEOS (CARRUSEL)
         // Puedes agregar cuantos quieras.
         // tipo: "mp4" (Para Imgur, archivos) o "youtube" (Para YouTube)
         videos: [
-            { tipo: "mp4", url: "https://i.imgur.com/CxEhjI7.mp4" }, // Video 1
-            { tipo: "mp4", url: "https://i.imgur.com/BxxyWZ2.mp4" },                 // Video 2 (Solo ID)
-            { tipo: "mp4", url: "https://i.imgur.com/dsQMGkU.mp4" }  // Video 3 (Repetido ejemplo)
-            { tipo: "mp4", url: "https://i.imgur.com/mE8KVGa.mp4" }
+            { tipo: "mp4", url: "https://i.imgur.com/DbeasO5.mp4" }, // Video 1
+            { tipo: "mp4", url: "https://i.imgur.com/KJ1mlDV.mp4" }, // Video 2
+            { tipo: "mp4", url: "https://i.imgur.com/tFYLoBD.mp4" }, // Video 3
+            { tipo: "mp4", url: "https://i.imgur.com/kW0VQUp.mp4" }, // Video 4
         ],
 
         redes: {
@@ -451,4 +451,3 @@
     </script>
 </body>
 </html>
-
